upgrade to ASM6 api and V9 class format